# SebyDBtnX

./: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  README.md  partitions.csv  sdkconfig  version.txt
hardware/: BOM.txt
hardware/SebyDBtn4/: BOM_SebyDBtn4_4.0_1_2025-09-15.csv
hardware/SebyDBtn4/stl/: SebyDBtn4_BackCover_V3.0.stl  SebyDBtn4_MainBody_V3.0.stl
hardware/SebyDBtn8/: BOM_SebyDBtn8_v3.0_2025-09-15.csv
hardware/SebyDBtn8/stl/: SebyDBtn8_BackCover_V3.0.stl
hardware/SebyDBtnX/stl/: SebyDBtnx_Key_Cover_1pos_V3.0.stl  SebyDBtnx_Key_DoorGate_1pos_V3.0.stl  SebyDBtnx_Key_Light_1pos_V3.0.stl  SebyDBtnx_Key_Light_2pos_V3.0.stl  SebyDBtnx_LightGuide_1pos_V3.0.stl  SebyDBtnx_LightGuide_2pos_V3.0.stl
main/: CMakeLists.txt  busrtx.c  buttons.c  commands.c  decoder.c  httpserver.c  idf_component.yml  leds.c  main.c  otaupload.c  setupcommand.c  utils.c
main/include/: busrtx.h  buttons.h  commands.h  config.h  decoder.h  httpserver.h  leds.h  otaupload.h  setupcommand.h  utils.h
main/web/: config.html  otaupload.html
other/: frame.txt  scsSniff.txt
